# Tennis-ETL-Pipeline

./: .gitignore  README.md  delete_stale_batches.sh  diagnose_iam.sh  docker-compose.yaml  extract_from_data_source.py  requirements.txt  response_cache.py  store_classes.json  store_leagues-by-category.json  store_leagues-by-class.json  store_leagues-info.json  store_leagues.json  store_matches-by-date.json  store_rankings.json  store_seasons-by-league.json  store_seasons-by-tournament.json  store_seasons.json  store_tournaments-by-league.json  store_tournaments.json  test.ipynb  test.py  test.txt  test_wheel_install.py
analysis/: explore_data.ipynb
artifacts/etl_utils_pkg/: pyproject.toml
artifacts/etl_utils_pkg/src/etl_utils/: __init__.py  _core.py
artifacts/jobs/: etl_utils.py  load_match_stats.py  load_matches.py  load_players.py  load_rankings.py
config/: airflow.cfg
dags/: main_dag.py  main_dag_script.py  setup_n_upload_dag.py  tennis_etl_dag.py  transform_dag.py  upload_data_dag.py
docs/: bigquery_schema.sql  pipeline_health.sql
plugins/: bq_checks.py
scripts/: build_wheel.sh  create_bigquery_schema.py  create_service_account.sh  create_service_account2.sh  create_service_account3.sh  manage_bigquery.py
